--- a/index.html
+++ b/index.html
@@ -103,3 +103,5 @@ layout: default
 		User:<span id="busuanzi_value_site_uv" style="font-family:Consolas;color:Silver;font-size:12px;"></span>
 	</span>
 </div>
+
+<img src="https://notbyai.fyi/img/created-by-human-not-by-ai-white.svg" alt="Not by AI">
