--- a/index.html
+++ b/index.html
@@ -105,3 +105,4 @@ layout: default
 </div>
 
 <img src="https://notbyai.fyi/img/created-by-human-not-by-ai-white.svg" alt="Not by AI">
+<img src="https://www.intel.cn/content/dam/logos/intel-footer-logo.svg" alt="Intel"> I love Intel!!!
