--- a/index.html
+++ b/index.html
@@ -104,5 +104,4 @@ layout: default
 	</span>
 </div>
 
-<img src="https://notbyai.fyi/img/created-by-human-not-by-ai-white.svg" alt="Not by AI">
-<img src="https://www.intel.cn/content/dam/logos/intel-footer-logo.svg" alt="Intel"> I love Intel!!!
+<p><img src="https://notbyai.fyi/img/created-by-human-not-by-ai-white.svg" alt="Not by AI">I love Intel!!!</p>
