--- a/index.html
+++ b/index.html
@@ -104,4 +104,4 @@ layout: default
 	</span>
 </div>
 
-<p><img src="https://notbyai.fyi/img/created-by-human-not-by-ai-white.svg" alt="Not by AI">I love Intel!!!</p>
+<img src="https://notbyai.fyi/img/created-by-human-not-by-ai-white.svg" alt="Not by AI">
