--- a/index.html
+++ b/index.html
@@ -105,3 +105,6 @@ layout: default
 </div>
 
 <img src="https://notbyai.fyi/img/created-by-human-not-by-ai-white.svg" alt="Not by AI">
+<a href="https://ao-buta.com/">
+    <img src="https://ao-buta.com/santa/assets/img/bnr/bnr_poster.jpg" alt="一起来看番">
+</a>
